--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-server": "^19.2.0",
     "@angular/router": "^19.2.0",
     "@angular/ssr": "^19.2.1",
+    "@material-tailwind/html": "^3.0.0-beta.7",
     "@tailwindcss/postcss": "^4.1.5",
     "express": "^4.18.2",
     "postcss": "^8.5.3",
