--- a/package.json
+++ b/package.json
@@ -3,11 +3,13 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
+    "start": "node server.j",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
-    "serve:ssr:amybrows": "node dist/amybrows/server/server.mjs"
+    "serve:ssr:amybrows": "node dist/amybrows/server/server.mjs",
+    "build:ssr": "ng build && ng run amybrows:server",
+    "serve:ssr": "node dist/amybrows/server/main.js"
   },
   "private": true,
   "dependencies": {
@@ -20,7 +22,10 @@
     "@angular/platform-server": "^19.2.0",
     "@angular/router": "^19.2.0",
     "@angular/ssr": "^19.2.1",
+    "@auth0/angular-jwt": "^5.2.0",
+    "@fortawesome/fontawesome-free": "^6.7.2",
     "@material-tailwind/html": "^3.0.0-beta.7",
+    "@nguniversal/express-engine": "^7.0.2",
     "@tailwindcss/postcss": "^4.1.5",
     "express": "^4.18.2",
     "postcss": "^8.5.3",
