--- a/package.json
+++ b/package.json
@@ -1,9 +1,6 @@
 {
   "name": "amybrows",
   "version": "0.0.0",
-  "engines": {
-    "node": ">=18 <19"
-  },
   "scripts": {
     "ng": "ng",
     "start": "node server.j",
@@ -31,6 +28,8 @@
     "@nguniversal/express-engine": "^7.0.2",
     "@tailwindcss/postcss": "^4.1.5",
     "express": "^4.18.2",
+    "firebase-admin": "^13.3.0",
+    "firebase-functions": "^6.3.2",
     "postcss": "^8.5.3",
     "rxjs": "~7.8.0",
     "tailwindcss": "^4.1.5",
