--- a/package.json
+++ b/package.json
@@ -13,10 +13,13 @@
   },
   "private": true,
   "dependencies": {
+    "@angular/animations": "^19.2.9",
+    "@angular/cdk": "^19.2.18",
     "@angular/common": "^19.2.0",
-    "@angular/compiler": "^19.2.0",
-    "@angular/core": "^19.2.0",
+    "@angular/compiler": "^19.2.14",
+    "@angular/core": "^19.2.14",
     "@angular/forms": "^19.2.0",
+    "@angular/material": "^19.2.18",
     "@angular/platform-browser": "^19.2.0",
     "@angular/platform-browser-dynamic": "^19.2.0",
     "@angular/platform-server": "^19.2.0",
@@ -25,8 +28,11 @@
     "@auth0/angular-jwt": "^5.2.0",
     "@fortawesome/fontawesome-free": "^6.7.2",
     "@material-tailwind/html": "^3.0.0-beta.7",
+    "@ng-bootstrap/ng-bootstrap": "^18.0.0",
     "@nguniversal/express-engine": "^7.0.2",
     "@tailwindcss/postcss": "^4.1.5",
+    "angular-calendar": "^0.31.1",
+    "date-fns": "^4.1.0",
     "express": "^4.18.2",
     "firebase-admin": "^13.3.0",
     "firebase-functions": "^6.3.2",
@@ -38,8 +44,8 @@
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^19.2.1",
-    "@angular/cli": "^19.2.11",
-    "@angular/compiler-cli": "^19.2.0",
+    "@angular/cli": "^19.2.14",
+    "@angular/compiler-cli": "^19.2.14",
     "@types/express": "^4.17.17",
     "@types/jasmine": "~5.1.0",
     "@types/node": "^18.18.0",
